--- a/folio.css
+++ b/folio.css
@@ -26,9 +26,9 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Flower';
-	src: url('fonts/IndieFlower-Regular.eot');
-	src: local('☺'), url('fonts/IndieFlower-Regular.woff') format('woff'), url('fonts/IndieFlower-Regular.ttf') format('truetype'), url('fonts/IndieFlower-Regular.svg') format('svg');
+	font-family: 'PTSR';
+	src: url('fonts/PTSans-Regular.eot');
+	src: local('☺'), url('fonts/PTSans-Regular.woff') format('woff'), url('fonts/PTSans-Regular.ttf') format('truetype'), url('fonts/PTSans-Regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -37,14 +37,14 @@
 	padding:0px;
 	margin:0px;
 	box-sizing:border-box;
-	font-family:'Poppins', sans-serif;
+	font-family:"PTSR";
 	perspective:800px;
 }
 
 body{
     padding: 0%;
   	margin: 0%;
-    background-color: #f3f3f3;
+    background-color: var(--my-blue);
     background-image: url(images/trigris.svg), url(images/trivert.svg);
     background-repeat: no-repeat;
     background-position: left -300px top -300px,  right -450px top -500px;
@@ -58,15 +58,15 @@ a{
 }
 
 .sidebar > ul > li:hover{
-    background-color: #f3f3f3;
+    background-color: var(--my-white);
 }
 
 .sidebar > ul > li:active{
-    background-color: #aeffc9;
+    background-color: var(--my-orange);
 }
 
 .en_cours{
-    background-color: #aeffc9;
+    background-color: var(--my-orange);
 }
 
 .global{
@@ -82,28 +82,14 @@ a{
 }
 
 .scroll_color{
-    background-color: #aeffc9;
+    background-color: var(--my-blue);
     margin-bottom: 0;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    border: 1px ridge #aeffc9;
-    border-bottom: none;    
+    border: 1px ridge var(--my-grey);
     position: sticky;
     top: 50px;
-}
-
-.scroll_cv{
-    background-color: #ffffff;
-    margin-top: 0;
-    border: 1px ridge #ffffff;
-    border-top: none;    
-    position: sticky;
-}
-
-.text_scroll{
-    margin: 0;
-    text-align: center;
 }
 
 .nom{
@@ -119,32 +105,15 @@ a{
 
 h1{
     font-family: "Quicksand";
+    color: var(--my-orange);
     font-size: 26pt;
     text-align: center;
     margin-top: 0;
 }
 
 p{
-    font-family: "Flower";
-}
-
-.dl_cv {
-    font-size: 16pt;
-    font-family: "Flower";
-    text-align: center;
-    border-radius: 10px;
-    background-color: #aeffc9;
-    margin-top: 25px;
-    margin-bottom: 25px;
-}
-
-.dl_cv:hover {
-    background-color: green;
-}
-
-.dl_cv:active {
-    box-shadow: inset -2px -2px 3px #aeffc9,
-                inset 2px 2px 3px #aeffc9;
+    font-family: "PTSR";
+    color: var(--my-white);
 }
 
 .container{
@@ -159,13 +128,14 @@ p{
     width:810px;
     padding: 25px;
     box-sizing: border-box;
-    background-color: white;
-    border-top: 1px solid #e1e1e1;
-    border-left: 1px solid #e1e1e1;
+    background-color: var(--my-grey);
+    border: 1px solid var(--my-blue);
+    border-right: none;
 }
 
 h2{
     font-family: "Quicksand";
+    color: var(--my-orange);
     margin-top: 0px;
     margin-left: 70px;
     font-size: 25pt;
@@ -187,8 +157,9 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: center; 
-    background-color: white;
-    border-top: 1px solid #e1e1e1;
+    background-color: var(--my-grey);
+    border-top: 1px solid var(--my-blue);
+    border-right: 1px solid var(--my-blue);
     padding-top: 20px;
 }
   
@@ -205,10 +176,10 @@ h2{
       bottom: 0;
       width: 0;
       height: 0;
-      border-bottom: 20px solid transparent;
-      border-left: 56px solid transparent;
+      border-bottom: 20px solid var(--my-blue);
+      border-left: 56px solid var(--my-blue);
       z-index: 0;
-      border-left-color: white;
+      border-left-color: var(--my-grey);
 }
   
 .sidebar > .sidebar_end::after {
@@ -225,159 +196,13 @@ h2{
     top: -13px;
     left: 53px;
     display: none;
-    font-family: "Flower";
-    color: green;
+    font-family: "PTSR";
+    color: var(--my-white);
 }
   
 .sidebar>ul>li>a:hover>span{
     display: inline;
 }
-
-/*** time line ***/
-.timeline {
-	position: relative;
-	width: 800px;
-	padding: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-  }
-  .timeline:before {
-	content: "";
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 2px;
-	height: 100%;
-	background-color: #ccc;
-  }
-  .timeline ul {
-	list-style-type: none;
-  }
-  .timeline ul li {
-	width: 50%;
-	padding: 5px 30px 40px 30px;
-	cursor: pointer;
-  }
-  .timeline ul li:nth-child(even):before {
-	content: "";
-	position: absolute;
-	width: 12px;
-	height: 12px;
-	background-color: #aeffc9;
-	border-radius: 50%;
-	left: -6px;
-	top: 12px;
-	transition: 0.5s;
-  }
-  .timeline ul li:nth-child(odd):before {
-	content: "";
-	position: absolute;
-	width: 12px;
-	height: 12px;
-	background-color: #aeffca;
-	border-radius: 50%;
-	right: -6px;
-	top: 12px;
-	transition: 0.5s;
-  }
-  .timeline ul li:hover:before {
-	box-shadow: 0px 0px 5px 2px #aeffc9;
-  }
-  .timeline ul li:nth-child(even) {
-	float: right;
-	text-align: left;
-	clear: both;
-  }
-  .timeline ul li:nth-child(odd) {
-	float: left;
-	text-align: right;
-	clear: both;
-  }
-  .timeline ul li:nth-child(odd) .time {
-  font-family: "Quicksand";
-	position: absolute;
-	right: 15%;
-	top: 3px;
-	background-color: #aeffc9;
-	color: #000000;
-	text-align: center;
-	padding-left: 10px;
-	width: 140px;
-	height: 28px;
-	line-height: 28px;
-	border-radius: 20px;
-	box-shadow: 0px 0px 0px 3px #b1faca;
-  }
-  .timeline ul li:nth-child(even) .time {
-  font-family: "Quicksand";
-	position: absolute;
-	left: 15%;
-	top: 3px;
-	background-color: #aeffc9;
-	color: #000000;
-	text-align: center;
-	padding-right: 10px;
-	width: 140px;
-	height: 28px;
-	line-height: 28px;
-	border-radius: 20px;
-	box-shadow: 0px 0px 0px 3px #b1faca;
-  }
-
-  .timeline ul li:nth-child(even) .content{
-    position: relative;
-    left: -760px;
-    top: 0px;
-    width: 700px;
-    text-align: right;
-  }
-
-  .timeline ul li:nth-child(odd) .content{
-    position: relative;
-    left: 380px;
-    top: 0px;
-    width: 700px;
-    text-align: left;
-}
-  .timeline ul li .content h3 {
-	color: green;
-	font-size: 17px;
-  }
-  .timeline ul li .content p {
-	color: #222;
-  }
-  /*** end timeline ***/
-
-  /*Formulaire*/
-.contact{
-  font-family: "Flower";
-  color: green;
-}
-
-form{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: left;
-}
-
-.expediteur, .boite, .mail, .objet, .message {
-  border: 2px ridge #aeffc9;
-}
-
-.envoi{
-  font-family: "Flower";
-  font-size: 16px;
-	background-color: #aeffc9;
-	text-align: center;
-	padding-left: 10px;
-	width: 140px;
-	height: 28px;
-	border-radius: 20px;
-  margin-top: 25px;
-}
-/*End Formulaire*/
 
 .coding{
   margin-left: 245px;
@@ -409,7 +234,7 @@ form{
 .c-dialog_box {
   width: 913px;
   height: 273px;
-  background:rgba(177, 250, 202, .5);
+  background:rgba(55, 81, 94, .5);
   padding: 50px;
   
 }
@@ -431,10 +256,10 @@ form{
   text-align: center;
   }
   .pf-grid-item .survole {
-  background-color: #666666;
+  background-color: var(--my-blue);
   position: absolute;
   top: 0;
-  color:green; 
+  color:var(--my-orange); 
   opacity: 0;
   width: 251px;
   }
@@ -460,26 +285,30 @@ form{
   }
   h3{
     font-family: "Quicksand";
+    color: var(--my-orange);
     font-size: 15pt;
 }
 .detail{
   font-size: 16pt;
-  font-family: "Flower";
+  font-family: "PTSR";
+  color: var(--my-white);
   text-align: center;
   border-radius: 10px;
-  background-color: #aeffc9;
+  background-color: var(--my-blue);
+  border: var(--my-blue);
   margin-top: 25px;
   margin-bottom: 25px;
 }
 .projetc{
-  color: green;
+  color: var(--my-orange);
 }
 .fermer{
   font-size: 16pt;
-  font-family: "Flower";
+  font-family: "PTSR";
   text-align: center;
   border-radius: 50px;
-  background-color: green;
+  background-color: var(--my-orange);
+  border: var(--my-orange);
   width: 33px;
   height: 33px;
 }
