--- a/folio.css
+++ b/folio.css
@@ -1,8 +1,9 @@
 :root{
-  --my-blue: #37515e;
-  --my-orange: #f87d13;
+  --my-blue: #c0decd;
+  --my-orange: #ff7f11;
   --my-white: #f5feff;
-  --my-grey: #9fa8ad;
+  --my-grey: #b1b8af;
+  --my-black:#544944;
 }
 @font-face {
 	font-family: 'Icomoon';
@@ -44,7 +45,7 @@
 body{
     padding: 0%;
   	margin: 0%;
-    background-color: var(--my-blue);
+    background-color: var(--my-grey);
     background-image: url(images/trigris.svg), url(images/trivert.svg);
     background-repeat: no-repeat;
     background-position: left -300px top -300px,  right -450px top -500px;
@@ -82,12 +83,12 @@ a{
 }
 
 .scroll_color{
-    background-color: var(--my-blue);
+    background-color: var(--my-grey);
     margin-bottom: 0;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    border: 1px ridge var(--my-grey);
+    border: 1px ridge var(--my-blue);
     position: sticky;
     top: 50px;
 }
@@ -128,8 +129,8 @@ p{
     width:810px;
     padding: 25px;
     box-sizing: border-box;
-    background-color: var(--my-grey);
-    border: 1px solid var(--my-blue);
+    background-color: var(--my-blue);
+    border: 1px solid var(--my-grey);
     border-right: none;
 }
 
@@ -157,9 +158,9 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: center; 
-    background-color: var(--my-grey);
-    border-top: 1px solid var(--my-blue);
-    border-right: 1px solid var(--my-blue);
+    background-color: var(--my-blue);
+    border-top: 1px solid var(--my-grey);
+    border-right: 1px solid var(--my-grey);
     padding-top: 20px;
 }
   
@@ -176,10 +177,10 @@ h2{
       bottom: 0;
       width: 0;
       height: 0;
-      border-bottom: 20px solid var(--my-blue);
-      border-left: 56px solid var(--my-blue);
+      border-bottom: 20px solid var(--my-grey);
+      border-left: 56px solid var(--my-grey);
       z-index: 0;
-      border-left-color: var(--my-grey);
+      border-left-color: var(--my-blue);
 }
   
 .sidebar > .sidebar_end::after {
@@ -294,8 +295,8 @@ h2{
   color: var(--my-white);
   text-align: center;
   border-radius: 10px;
-  background-color: var(--my-blue);
-  border: var(--my-blue);
+  background-color: var(--my-grey);
+  border: var(--my-grey);
   margin-top: 25px;
   margin-bottom: 25px;
 }
