--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root{
-  --my-blue: #37515e;
-  --my-orange: #f87d13;
+  --my-blue: #c0decd;
+  --my-orange: #ff7f11;
   --my-white: #f5feff;
-  --my-grey: #9fa8ad;
+  --my-grey: #b1b8af;
+  --my-black:#544944;
 }
 @font-face {
 	font-family: 'Icomoon';
@@ -33,199 +34,334 @@
 	font-style: normal;
 }
 
-a{
-  text-decoration: none;
-  color:var(--my-blue);
-}
-
-.sidebar > ul > li:hover{
-  background-color: var(--my-white);
-}
-
-.sidebar > ul > li:active{
-  background-color: var(--my-orange);
-}
-
-.en_cours{
-  background-color: var(--my-orange);
+*{
+	padding:0px;
+	margin:0px;
+	box-sizing:border-box;
+	font-family:'PTSR';
+	perspective:800px;
 }
 
 body{
-	padding: 0%;
-	margin: 0%;
-  background-color: var(--my-blue);
-  background-image: url(images/trigris.svg), url(images/trivert.svg);
-  background-repeat: no-repeat;
-  background-position: left -300px top -300px,  right -450px top -500px;
-  background-size: 1080px;
-  font-size: 16pt;
+    padding: 0%;
+	  margin: 0%;
+    background-color: var(--my-grey);
+    background-image: url(images/trigris.svg), url(images/trivert.svg);
+    background-repeat: no-repeat;
+    background-position: left -300px top -300px,  right -450px top -500px;
+    background-size: 1080px;
+    font-size: 16pt;
 }
 
-.container{
-  width:80%;
-  max-width: 866px;
-  box-sizing: border-box;
-  margin: 50px auto;
-  display: flex;  
+a{
+    text-decoration: none;
+    color: var(--my-grey);
 }
 
-.wrap_content{
-  width:810px;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: var(--my-grey);
-  border-top: 1px solid var(--my-blue);
-  border-left: 1px solid var(--my-blue);
+.sidebar > ul > li:hover{
+    background-color: var(--my-white);
 }
 
+.sidebar > ul > li:active{
+    background-color: var(--my-orange);
+}
+
+.en_cours{
+    background-color: var(--my-orange);
+}
+
+.global{
+    width: 1196px;    
+    box-sizing: border-box;
+    margin: 50px auto;
+    display: flex;
+    align-content: space-around;
+}
+
+.scroll{
+  width: 23%;
+}
+
+.scroll_color{
+    background-color: var(--my-grey);
+    margin-bottom: 0;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    border: 1px ridge var(--my-blue);  
+    position: sticky;
+    top: 50px;
+}
+
+.nom{
+    text-align: center;
+    padding-bottom: 25px;
+}
 .avatar{
-  margin: 10px;
-  margin-left: 20px;
-}
-
-.etat_civil{
-  background-color: var(--my-blue);
-  margin: 5px;
-  padding-bottom: 10px;
-  display: flex;
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
 }
 
 h1{
-  color: var(--my-orange);
-  margin-bottom: 0;
-  margin-top: 70px;
-  margin-left: 15px;
-}
-
-.civil {
-  color: var(--my-white);
-  margin-bottom: 0;
-  margin-top: 0;
-  margin-left: 15px;
-}
-
-.me{
-  text-align: center;
-  font-size: 22pt;
-}
-
-h1, h2, h3{
-  color: var(--my-orange);
-  font-family: "Quicksand";
+    font-family: "Quicksand";
+    color: var(--my-orange);
+    font-size: 26pt;
+    text-align: center;
+    margin-top: 0;
 }
 
 p{
-  color: var(--my-white);
-  font-family: "PTSR";
+    font-family: "PTSR";
+    color: var(--my-white);
 }
 
-.info{
-  border-top: 1mm solid var(--my-blue);
+.container{
+    width:80%;
+    max-width: 866px;
+    box-sizing: border-box;
+    display: flex;
+    margin-left: auto;
+}
+  
+.wrap_content{
+    width:810px;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: var(--my-blue);
+    border: 1px solid var(--my-grey);
+    border-right: none;
 }
 
-.cont_info{
-  color: var(--my-white);
-  display: flex;
+h2{
+    font-family: "Quicksand";
+    color: var(--my-orange);
+    margin-top: 0px;
+    margin-left: 70px;
+    font-size: 25pt;
 }
-
-.perso{
-  color: var(--my-white);
-  list-style: none;
-  font-family: "PTSR";
-}
-
-.persos{
-  color: var(--my-white);
-  list-style: none;
-  font-family: "PTSR";
-}
-
-.soft{
-  display: flex;
-  align-content: space-between;
-  border-top: 1mm solid var(--my-blue);
-}
-
-.skill{
-  width: 45%;
-}
-
-.crt_info{
-  width: 115%;
-}
-
-.crt_infos{
-  padding-right: 50px;
-}
-
-.cont_loisir{
-  display: flex;
-  align-content: space-around;
-}
-
-.crt_loisir{
-  width: 45%;
+span{
+  color: var(--my-orange);
 }
 
 .sidebar{
-  width:56px;  
+    width:56px;  
+    
+}
   
-}
-
 .loisirs{
-  width: 769px;
+    width: 769px;
 }
-
+  
 .sidebar > ul{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; 
-  background-color: var(--my-grey);
-  border-top: 1px solid var(--my-blue);
-  border-right: 1px solid var(--my-blue);
-  padding-top: 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    background-color: var(--my-blue);
+    border: 1px solid var(--my-grey);
+    border-left: none;
+    border-bottom: none;
+    padding-top: 20px;
 }
-
+  
 .sidebar > ul > li{
-  text-align: center;
-  padding-bottom: 10px;
-  padding-top: 10px;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-top: 10px;
 }
-
+  
 .sidebar > .sidebar_end{
-  position: relative;
-    left: 0;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-bottom: 20px solid transparent;
-    border-left: 56px solid transparent;
-    z-index: 0;
-    border-left-color: var(--my-grey);
+    position: relative;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 0;
+      border-bottom: 20px solid var(--my-grey);
+      border-left: 56px solid transparent;
+      z-index: 0;
+      border-left-color: var(--my-blue);
 }
-
+  
 .sidebar > .sidebar_end::after {
-  content:'';
+    content:'';
 }
-
+  
 .sidebar>ul>li>a{
-  position: relative;
+    position: relative;
 }
-
+  
 .infobulle{
-  color: var(--my-white);
-  position: absolute;
-  cursor: help;
-  top: -13px;
-  left: 53px;
-  display: none;
-  font-family: "PTSR";
+    position: absolute;
+    cursor: help;
+    top: -13px;
+    left: 53px;
+    display: none;
+    font-family: "PTSR";
+    color: var(--my-white);
+}
+  
+.sidebar>ul>li>a:hover>span{
+    display: inline;
 }
 
-.sidebar>ul>li>a:hover>span{
-  display: inline;
+/*** time line ***/
+h3{
+  font-size: 20px;
+}
+.timeline {
+	position: relative;
+	width: 800px;
+	padding: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  .timeline:before {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 2px;
+	height: 100%;
+	background-color: var(--my-grey);
+  }
+  .timeline ul {
+	list-style-type: none;
+  }
+  .timeline ul li {
+	width: 50%;
+	padding: 5px 30px 40px 30px;
+	cursor: pointer;
+  }
+  .timeline ul li:nth-child(even):before {
+	content: "";
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	background-color: var(--my-orange);
+	border-radius: 50%;
+	left: -6px;
+	top: 12px;
+	transition: 0.5s;
+  }
+  .timeline ul li:nth-child(odd):before {
+	content: "";
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	background-color: var(--my-orange);
+	border-radius: 50%;
+	right: -6px;
+	top: 12px;
+	transition: 0.5s;
+  }
+  .timeline ul li:hover:before {
+	box-shadow: 0px 0px 5px 2px var(--my-grey);
+  }
+  .timeline ul li:nth-child(even) {
+	float: right;
+	text-align: left;
+	clear: both;
+  }
+  .timeline ul li:nth-child(odd) {
+	float: left;
+	text-align: right;
+	clear: both;
+  }
+  .timeline ul li:nth-child(odd) .time {
+  font-family: "Quicksand";
+	position: absolute;
+	right: 15%;
+	top: 3px;
+	background-color: var(--my-grey);
+	text-align: center;
+	padding-left: 10px;
+	width: 140px;
+	height: 28px;
+	line-height: 28px;
+	border-radius: 20px;
+	box-shadow: 0px 0px 0px 3px var(--my-grey);
+  }
+  .timeline ul li:nth-child(even) .time {
+  font-family: "Quicksand";
+	position: absolute;
+	left: 15%;
+	top: 3px;
+	background-color: var(--my-grey);
+	color: var(--my-white);
+	text-align: center;
+	padding-right: 10px;
+	width: 140px;
+	height: 28px;
+	line-height: 28px;
+	border-radius: 20px;
+	box-shadow: 0px 0px 0px 3px var(--my-grey);
+  }
+
+  .timeline ul li:nth-child(even) .content{
+    position: relative;
+    left: -760px;
+    top: 0px;
+    width: 700px;
+    text-align: right;
+  }
+
+  .timeline ul li:nth-child(odd) .content{
+    position: relative;
+    left: 380px;
+    top: 0px;
+    width: 700px;
+    text-align: left;
+}
+  .timeline ul li .content p {
+	color: var(--my-white);
+  }
+  /*** end timeline ***/
+
+  /*Formulaire*/
+.contact{
+  font-family: "PTSR";
+  color: var(--my-grey);
+}
+
+form{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+}
+
+.expediteur, .boite, .mail, .objet, .message {
+  border: 2px ridge var(--my-white);
+  background-color: var(--my-white);
+}
+
+.envoi{
+  font-family: "PTSR";
+  color: var(--my-white);
+  font-size: 16px;
+	background-color: var(--my-grey);
+  border: var(--my-grey);
+	text-align: center;
+	padding-left: 10px;
+	width: 140px;
+	height: 28px;
+	border-radius: 20px;
+  margin-top: 25px;
+}
+/*End Formulaire*/
+
+.coding{
+  margin-left: 245px;
+  margin-top: 50px;
+}
+
+.wait{  
+  text-align: center;
+  font-size: 30px;
 }
